grammatic.txt
<Expression> ::= <LogicalAnd> { "|" <LogicalAnd> }

<LogicalAnd> ::= <Comparison> { "&" <Comparison> }

<Comparison> ::= <Sum> { ("=" | "!=" | "<" | "<=" | ">" | ">=") <Sum> }

<Sum> ::= <Product> { ("+" | "-") <Product> }

<Product> ::= <Factor> { ("*" | "/") <Factor> }

<Factor> ::= <Letter>
           | <SignedInteger>
           | <UnsignedInteger>
           | <SignedFloat>
           | <UnsignedFloat>
           | "(" <Expression> ")"
           | "!" <Factor>

<SignedInteger> ::= "-" <UnsignedInteger>

<UnsignedInteger> ::= <Digit> { <Digit> }

<SignedFloat> ::= "-" <UnsignedFloat>

<UnsignedFloat> ::= <UnsignedInteger> "." <UnsignedInteger>

<Digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<Letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" |
             "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
